--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -17,3 +17,75 @@
         flex: 8;
     }
 }
+
+#step {
+    display: flex;
+    align-items: stretch;
+    height: 100vh;
+    background: linear-gradient(295.02deg, #FADB8B -1.12%, #7F0BA4 99.61%);
+    
+    aside {
+        flex: 4;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 120px 80px;
+    }
+
+    .step-defaut {
+        font-size: 22px;
+        font-weight: 400;
+    }
+
+    .step-active {
+        color: #FADB8B;
+        font-size: 30px;
+        font-weight: 700;
+    }
+    
+    main {
+        flex: 9;
+    }
+
+    .chat {
+        background: #FFFFFF;
+        height: 100vh;
+        box-shadow: 0px -5px 10px rgba(212, 212, 246, 0.1);
+        border-radius: 47px 0px 0px 47px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+.fs-30 {
+    font-size: 22px;
+}
+
+.fs-36 {
+    font-size: 36px;
+    line-height: 0.5;
+}
+
+.fs-56 {
+    font-size: 56px;
+    font-weight: 700;
+}
+
+.m-t22 {
+    margin-top: 22px;
+}
+
+.m-t24 {
+    margin-top: 24px;
+}
+
+.m-b22 {
+    margin-bottom: 22px;
+}
+
+.m-y30 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
